--- a/index.html
+++ b/index.html
@@ -10,151 +10,80 @@
 
 <body>
 
-<container class="home">
+<div class="container">
 
   <header>
-    <div class="info">
-      <div class="name">
-        Hiroyuki Noguchi
-      </div>
-      <div class="contact">
-        <li><b>Email:</b> <a href="mailto:hiroyuki.noguchi7@gmail.com" target="_blank">hiroyuki.noguchi7@gmail.com</a></li>
-        <li><b>Resume:</b> <a href="https://www.linkedin.com/in/hiroyukinoguchi/" target="_blank">Linkedin</a></li>
-      </div>
+    <div class="intro">
+      <p>Hi, I'm Hiro. A product designer with over 6 years experience. I previously worked in London, San francisco and currently based in Tokyo.</p>
     </div>
   </header>
 
   <content>
-    <div class="intro">
-      <div class="main">
-        <p>Hello, I'm Hiro. A product designer based in Tokyo.</p>
-      </div>
-      <div class="sub">
-        📍 Tokyo
-        <strike>San Francisco</strike>
-        <strike>London</strike>
-        <strike>Perth</strike>
-      </div>
-    </div>
-    <!--div class="pj01">
-      <div class="box">
-        <div class="pj_header">
-          <div class="logo_img"><img src="img/mercari_logo.png"></div>
-          <div class="pjtitle">Mercari</div>
-          <div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div>
-          <div class="pjsubtitle">View workspace</div>
-          <div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div>
-        </div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6w_1gjbJEmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <div class="left_img"><img src="img/gg_04.svg"></div>
-        <div class="right_img"><img src="img/gg_03.svg"></div>
-      </div>
-    </div-->
-
     <div class="pj01">
-      <div class="box_company">
-        <div class="pj_header">
-          <div class="logo_img"><img src="img/mercari_logo.png"></div>
-          <div class="company_name">Mercari</div>
-          <div class="pjbody"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank">Mercari</a> is a company which envisions to connect millions of people across the U.S. to shop and sell almost anything. We all have things we don’t use, never used, or simply outgrew. But these treasured items still have value. Mercari is always trying to find new ways to make exchanging items even easier. <br><br>I joined Mercari Japan and transferred to team in the US after the IPO. At Mercari US, I was fortunate to work on many of the major initiatives and projects. These include creative design, app design and web design. </div>
-          <!--div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div-->
-        </div>
-        <div class="img_box">
-          <iframe width="660" height="420" src="https://www.youtube.com/embed/6w_1gjbJEmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+      <div class="description_pj01">
+        <h1>Mercari — Product Information</h1>
+        <p>Product page is where it drives most of the traffic on Mercari. I lead to re-design the overall page and help people to have better shopping experience.</p>
+        <div class="cta">Work space</div>
       </div>
-    </div>
-
-    <div class="pj04">
-      <div class="box">
-        <div class="pj_header">
-          <div class="pjtitle">Onboarding new sellers</div>
-          <div class="pjbody">Selling things is core of Mercari. However, not many of us know what we have at home that sells. I lead design to help new sellers discover items to sell from their homes.</div>
-          <div class="pjsubtitle"><a href="">View workspace</a></div>
-        </div>
-        <div class="img_box">
-          <div class="left_img"><img src="img/nlo_01.svg"></div>
-          <div class="right_img"><img src="img/nlo_02.png"></div>
-          <div class="right_img"><img src="img/nlo_03.png"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="pj03">
-      <div class="box">
-        <div class="pj_header">
-          <div class="pjtitle">Private offers</div>
-          <div class="pjbody">Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used feature and continuing to make positive impact on overall sales.</div>
-          <div class="pjsubtitle"><a href="">View workspace</a></div>
-        </div>
-        <div class="img_box">
-          <div class="left_img"><img src="img/sellertool_02.svg"></div>
-          <div class="right_img"><img src="img/sellertool_03.svg"></div>
-          <div class="right_img_vid"><video width="310" autoplay muted loop><source src="img/offer_to_likers.mp4" type="video/mp4"></video></div>
-        </div>
+      <div class="img_pj01">
+        <video autoplay muted loop><source src="img/item_detail.mp4" type="video/mp4"></video>
       </div>
     </div>
 
     <div class="pj02">
-      <div class="box">
-        <div class="pj_header">
-          <div class="pjtitle">Loyalty program</div>
-          <div class="pjbody">Lead design to create a loyalty program where sellers can get a lower sales fee based on their earnings on the market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</div>
-          <div class="pjsubtitle"><a href="">View workspace</a></div>
-        </div>
-        <div class="img_box">
-          <div class="left_img"><img src="img/referral_02.svg"></div>
-          <div class="right_img"><img src="img/referral_03.svg"></div>
-          <div class="right_img_vid"><video width="340" autoplay muted loop><source src="img/seller_tiers.mp4" type="video/mp4"></video></div>
-        </div>
+      <div class="img_pj02">
+        <img src="img/nlo2.png">
+        <video autoplay muted loop><source src="img/nlo2.mp4" type="video/mp4"></video>
+      </div>
+      <div class="description_pj02">
+        <h1>Mercari — NLO</h1>
+        <p>Selling is core of Mercari. However, not many of us know what we have at home that sells. I lead design to help new sellers discover items to sell from their homes.</p>
+        <div class="cta">Work space</div>
       </div>
     </div>
 
-    <div class="pj06">
-      <div class="box">
-        <div class="pj_header">
-          <div class="pjtitle">Product page</div>
-          <!--div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div-->
-          <div class="pjbody">Product page is where it drives most of the traffic on Mercari website. I lead to re-design the overall page and help people to have better shopping experience.</div>
-          <div class="pjsubtitle"><a href="">View workspace</a></div>
-        </div>
-        <div class="right_img_vid"><video width="1160" autoplay muted loop><source src="img/item_detail.mp4" type="video/mp4"></video></div>
+    <div class="pj01">
+      <div class="description_pj01">
+        <h1>Mercari — Loyalty Program</h1>
+        <p>Lead design to create a loyalty program where sellers can get a lower sales fee based on their earnings on the market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</p>
+        <div class="cta">Work space</div>
+      </div>
+      <div class="img_pj01">
+        <img src="img/loyalty.png">
       </div>
     </div>
 
-    <div class="pj05">
-      <div class="box_company">
-        <div class="pj_header">
-          <div class="logo_img"><img src="img/origami_logo.png"></div>
-          <div class="company_name">Origami Pay</div>
-          <div class="pjbody">Origami offers seamless payment infrastructure for both merchants and consumers. I joined <a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank">Origami</a> at the early phase when there was 10 employees. I was fortunate to be part of their shift from Ecommerce platform to payment service. Origami was <a href="https://www.techinasia.com/mercari-acquires-origami" target="_blank">acquired by Mercari</a> in 2020.</div>
-        </div>
-        <div class="img_box">
-          <iframe width="660" height="420" src="https://www.youtube.com/embed/jqwq2bxWYqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+    <div class="pj02">
+      <div class="img_pj02">
+        <img src="img/offer.png">
+        <video autoplay muted loop><source src="img/offer.mp4" type="video/mp4"></video>
+      </div>
+      <div class="description_pj02">
+        <h1>Mercari — Private Offers</h1>
+        <p>Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used feature and continuing to make positive impact on overall sales.</p>
+        <div class="cta">Work space</div>
       </div>
     </div>
 
-    <div class="pj07">
-      <div class="box">
-        <div class="pj_header">
-          <div class="pjtitle">Mobile payment system</div>
-          <!--div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div-->
-          <div class="pjbody">Product page is where it drives most of the traffic on Mercari website. I lead to re-design the overall page and help people to have better shopping experience.</div>
-          <div class="pjsubtitle"><a href="">View workspace</a></div>
-        </div>
-          <div class="left_img"><img src="img/origami_pay.png"></div>
-          <div class="right_img_vid"><video width="340" autoplay muted loop><source src="img/pay.mp4" type="video/mp4"></video></div><br><br><br><br><br>
+    <div class="pj01">
+      <div class="description_pj01">
+        <h1>Origami Pay — Mobile Payment</h1>
+        <p>Origami offers seamless payment infrastructure for both merchants and consumers. I joined <a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank">Origami</a> at the early phase when there was 10 employees. I was fortunate to be part of their shift from Ecommerce platform to payment service. Origami was <a href="https://www.techinasia.com/mercari-acquires-origami" target="_blank">acquired by Mercari</a> in 2020.</p>
+        <div class="cta">Work space</div>
+      </div>
+      <div class="img_pj01_single">
+        <video autoplay muted loop><source src="img/pay.mp4" type="video/mp4"></video>
       </div>
     </div>
 
+    <footer>
+      <div class="contact_info">
+        <li>hiroyuki.noguchi7@gmail.com</li>
+        <li><a href="https://www.linkedin.com/in/hiroyukinoguchi/" target="_blank"> CV</a></li>
+      </div>
+    </footer>>
+  </content>
 
-    <content>
-
-
-
-
-
-</container>
+</div>
 
 </body>
