--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <div class="intro">
-      <p>Hi, I'm Hiro. A product designer with over 6 years experience. I previously worked in London, San francisco and currently based in Tokyo.</p>
+      <p>Hi, I'm Hiro. A product designer with over 6 years experience. I previously worked in London, San francisco and am currently based in Tokyo.</p>
     </div>
   </header>
 
@@ -68,7 +68,7 @@
     <div class="pj01">
       <div class="description_pj01">
         <h1>Origami Pay — Mobile Payment</h1>
-        <p>Origami offers seamless payment infrastructure for both merchants and consumers. I joined <a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank">Origami</a> at the early phase when there was 10 employees. I was fortunate to be part of their shift from Ecommerce platform to payment service. Origami was <a href="https://www.techinasia.com/mercari-acquires-origami" target="_blank">acquired by Mercari</a> in 2020.</p>
+        <p><a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank">Origami</a> offers seamless payment infrastructure for both merchants and consumers. I've joined the company at the early phase with 10 employees. I was fortunate to be part of their shift from e-commerce platform to payment service. Origami was <a href="https://www.techinasia.com/mercari-acquires-origami" target="_blank">acquired by Mercari</a> in 2020.</p>
         <div class="cta">Work space</div>
       </div>
       <div class="img_pj01_single">
