--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
       </div>
     </div>
 
+    <div class="pj02">
+      <div class="img_pj03">
+        <img src="img/gg.png">
+      </div>
+      <div class="description_pj02">
+        <h1>Mercari — Digital Games</h1>
+        <p>Lead design to create a entire platform for trading digital goods leveraging the Mercari escrow payment system.</p>
+        <div class="cta">Work space</div>
+      </div>
+    </div>
+
     <footer>
       <div class="contact_info">
         <li>hiroyuki.noguchi7@gmail.com</li>
