--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="description_pj01">
         <h1>Mercari — Product Information</h1>
         <p>Product page is where it drives most of the traffic on Mercari. I lead to re-design the overall page and help people to have better shopping experience.</p>
-        <div class="cta">Work space</div>
+        <div class="cta">Coming soon</div>
       </div>
       <div class="img_pj01">
         <video autoplay muted loop><source src="img/item_detail.mp4" type="video/mp4"></video>
@@ -38,7 +38,7 @@
       <div class="description_pj02">
         <h1>Mercari — NLO</h1>
         <p>Selling is core of Mercari. However, not many of us know what we have at home that sells. I lead design to help new sellers discover items to sell from their homes.</p>
-        <div class="cta">Work space</div>
+        <a href="https://www.figma.com/file/dsU3cqM5WyZ05lerL4LMGf/All?node-id=0%3A1" target="_blank"><div class="cta">Work space</div></a>
       </div>
     </div>
 
@@ -46,7 +46,7 @@
       <div class="description_pj01">
         <h1>Mercari — Loyalty Program</h1>
         <p>Lead design to create a loyalty program where sellers can get a lower sales fee based on their earnings on the market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</p>
-        <div class="cta">Work space</div>
+        <a href="https://www.figma.com/file/dsU3cqM5WyZ05lerL4LMGf/All?node-id=1%3A75871" target="_blank"><div class="cta">Work space</div></a>
       </div>
       <div class="img_pj01">
         <img src="img/loyalty.png">
@@ -61,7 +61,7 @@
       <div class="description_pj02">
         <h1>Mercari — Private Offers</h1>
         <p>Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used feature and continuing to make positive impact on overall sales.</p>
-        <div class="cta">Work space</div>
+        <div class="cta">Coming soon</div>
       </div>
     </div>
 
@@ -69,7 +69,6 @@
       <div class="description_pj01">
         <h1>Origami Pay — Mobile Payment</h1>
         <p><a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank">Origami</a> offers seamless payment infrastructure for both merchants and consumers. I've joined the company at the early phase with 10 employees. I was fortunate to be part of their shift from e-commerce platform to payment service. Origami was <a href="https://www.techinasia.com/mercari-acquires-origami" target="_blank">acquired by Mercari</a> in 2020.</p>
-        <div class="cta">Work space</div>
       </div>
       <div class="img_pj01_single">
         <video autoplay muted loop><source src="img/pay.mp4" type="video/mp4"></video>
@@ -82,8 +81,8 @@
       </div>
       <div class="description_pj02">
         <h1>Mercari — Digital Games</h1>
-        <p>Lead design to create a entire platform for trading digital goods leveraging the Mercari escrow payment system.</p>
-        <div class="cta">Work space</div>
+        <p>Lead design to create an entire platform for trading digital goods leveraging the Mercari escrow payment system.</p>
+        <div class="cta">Coming soon</div>
       </div>
     </div>
 
