--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="description_pj02">
         <h1>Mercari — Digital Games</h1>
         <p>Lead design to create an entire platform for trading digital goods leveraging the Mercari escrow payment system.</p>
-        <div class="cta">Coming soon</div>
+        <a href="https://www.figma.com/file/D1WUYqmtcGzDthavfnNJ5u/GG?node-id=0%3A1" target="_blank"><div class="cta">Work space</div></a>
       </div>
     </div>
 
