--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <div class="intro">
-      <p>Hi, I'm Hiro. A product designer with over 6 years experience. I previously worked in London, San francisco and am currently based in Tokyo.</p>
+      <p>Hiro is a product designer with over 6 years experience. Previously worked in London, San francisco and currently based in Tokyo.</p>
     </div>
   </header>
 
@@ -38,7 +38,7 @@
       <div class="description_pj02">
         <h1>Mercari — NLO</h1>
         <p>Selling is core of Mercari. However, not many of us know what we have at home that sells. I lead design to help new sellers discover items to sell from their homes.</p>
-        <a href="https://www.figma.com/file/dsU3cqM5WyZ05lerL4LMGf/All?node-id=0%3A1" target="_blank"><div class="cta">Work space</div></a>
+        <a href="nlo.html" target="_blank"><div class="cta">View more</div></a>
       </div>
     </div>
 
@@ -46,7 +46,7 @@
       <div class="description_pj01">
         <h1>Mercari — Loyalty Program</h1>
         <p>Lead design to create a loyalty program where sellers can get a lower sales fee based on their earnings on the market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</p>
-        <a href="https://www.figma.com/file/dsU3cqM5WyZ05lerL4LMGf/All?node-id=1%3A75871" target="_blank"><div class="cta">Work space</div></a>
+        <a href="sellertier.html" target="_blank"><div class="cta">View more</div></a>
       </div>
       <div class="img_pj01">
         <img src="img/loyalty.png">
