--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="description_pj01">
         <h1>Mercari — Product Information</h1>
         <p>Product page is where it drives most of the traffic on Mercari. I lead to re-design the overall page and help people to have better shopping experience.</p>
-        <div class="cta">Coming soon</div>
+        <div class="cta_disabled">Coming soon</div>
       </div>
       <div class="img_pj01">
         <video autoplay muted loop><source src="img/item_detail.mp4" type="video/mp4"></video>
@@ -61,7 +61,7 @@
       <div class="description_pj02">
         <h1>Mercari — Private Offers</h1>
         <p>Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used feature and continuing to make positive impact on overall sales.</p>
-        <div class="cta">Coming soon</div>
+        <div class="cta_disabled">Coming soon</div>
       </div>
     </div>
 
@@ -82,7 +82,7 @@
       <div class="description_pj02">
         <h1>Mercari — Digital Games</h1>
         <p>Lead design to create an entire platform for trading digital goods leveraging the Mercari escrow payment system.</p>
-        <a href="https://www.figma.com/file/D1WUYqmtcGzDthavfnNJ5u/GG?node-id=0%3A1" target="_blank"><div class="cta">Work space</div></a>
+        <a href="https://www.figma.com/file/D1WUYqmtcGzDthavfnNJ5u/GG?node-id=0%3A1" target="_blank"><div class="cta">View more</div></a>
       </div>
     </div>
 
