--- a/sellertier.html
+++ b/sellertier.html
@@ -15,7 +15,7 @@
   <content>
     <div class="nlo">
       <div class="title">
-        <p>Lead design to create a loyalty program where sellers can get a lower sales fee based on their earnings on the market place. We wanted to encourage users to list more but also behave like a good citizens(less cancel rates, less returns) and we reward them for it at the same time.</p>
+        <p>Seller Tiers is a loyalty program where sellers can get a lower sales fee based on their earnings on the marketplace. We wanted to encourage users to list more but also behave like a good citizens(less cancel rates, less returns) and we reward them for it in return.</p>
       </div>
       <div class="sub_info">
         <div class="left">
