--- a/sellertier.html
+++ b/sellertier.html
@@ -14,10 +14,10 @@
 
   <content>
     <div class="nlo">
-      <div class="title">
+      <div class="animated animatedFadeInUp fadeInUp title">
         <p>Seller Tiers is a loyalty program where sellers can get a lower sales fee based on their earnings on the marketplace. We wanted to encourage users to list more but also behave like a good citizens(less cancel rates, less returns) and we reward them for it in return.</p>
       </div>
-      <div class="sub_info">
+      <div class="animated animatedFadeInUp fadeInUp sub_info">
         <div class="left">
           Team<br><br>Product owner, Product manager, iOS/Android/Back-end/Web engineers, UX copy writer, Product designer, QA
         </div>
@@ -25,7 +25,7 @@
           Results<br><br>We grew our revenue by 3%, GMV by 5.2% daily average listing By 6.85%. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.
         </div>
       </div>
-      <div class="nlo_img01">
+      <div class="animated animatedFadeInUp fadeInUp nlo_img01">
         <div class="img_in">
           <img src="img/seller_tier/sellertier_pj_cover.png">
         </div>
