--- a/nlo.html
+++ b/nlo.html
@@ -14,10 +14,10 @@
 
   <content>
     <div class="nlo">
-      <div class="title">
+      <div class="animated animatedFadeInUp fadeInUp title">
         <p>Selling is core of Mercari. However, not many of us know what we have at home that sells. Our primary goal was to help our users discover things that they can sell right from home.</p>
       </div>
-      <div class="sub_info">
+      <div class="animated animatedFadeInUp fadeInUp sub_info">
         <div class="left">
           Team<br><br>Product owner, Product manager, iOS/Android/Back-end/Web engineers, UX copy writer, Product designer, QA
         </div>
@@ -25,7 +25,7 @@
           Results<br><br>We grew our List Start CVR by +3%, List Start # per Starter by +16%, List Comp CVR by +7%. We've successfully achieved our goal to help our users discover more things to sell from their homes.
         </div>
       </div>
-      <div class="nlo_img01">
+      <div class="animated animatedFadeInUp fadeInUp nlo_img01">
         <div class="img_in">
           <img src="img/nlo/nlo_pj_cover.png">
         </div>
