--- a/nlo.html
+++ b/nlo.html
@@ -115,7 +115,7 @@
 
       <div class="nlo_img01">
         <div class="img_in">
-          <video controls><source src="img/pj_nlo06.mp4" type="video/mp4"></video>
+          <video controls><source src="img/nlo/pj_nlo06.mp4" type="video/mp4"></video>
         </div>
       </div>
 
