--- a/nlo.html
+++ b/nlo.html
@@ -134,6 +134,23 @@
           <img src="img/nlo/nlo_pj_07.png">
         </div>
       </div>
+
+      <div class="sub_info">
+        <div class="title_sml">
+          <p>Exploration</p>
+        </div>
+        <div class="left">
+          We wanted to make sure that we come up with a best solution to the problem and think about wide range of possibilities. Prior to making the final decision, we explored several ideas and critiqued among the team.
+        </div>
+        <div class="right">
+          Here are some of the ideas that we mainly focused on and discussed in the team.
+        </div>
+      </div>
+      <div class="nlo_img01">
+        <div class="img_in">
+          <img src="img/nlo/nlo_pj_08.png">
+        </div>
+      </div>
     </div>
 
     <footer>
