--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="description_pj02">
         <h1>Mercari — Private Offers</h1>
         <p>Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used feature and continuing to make positive impact on overall sales.</p>
-        <div class="cta_disabled">Coming soon</div>
+        <a href="offer.html" target="_blank"><div class="cta">View more</div></a>
       </div>
     </div>
 
