--- a/offer.html
+++ b/offer.html
@@ -33,6 +33,22 @@
 
       <div class="sub_info">
         <div class="title_sml">
+          <p>Introducing the feature</p>
+        </div>
+        <div class="left">
+          First of all, we wanted to introduce the feature by prompting the full screen modal to make sure that everyone sees the release. We decided to take users to their list of items that they are selling as an optional CTA so that they can quickly try out the Private offers.
+        </div>
+        <div class="right">
+        </div>
+      </div>
+      <div class="nlo_img01">
+        <div class="img_in">
+          <img src="img/offer/offer_pj_05.png">
+        </div>
+      </div>
+
+      <div class="sub_info">
+        <div class="title_sml">
           <p>Sending out the private offers</p>
         </div>
         <div class="left">
@@ -56,7 +72,6 @@
           For the items that users liked, they will then recieves a private offer from the seller via inbox. Buyer can directly accept the offer to purchase the item or they can further negotiate by using the messaging.
         </div>
         <div class="right">
-
         </div>
       </div>
       <div class="nlo_img01">
