--- a/offer.html
+++ b/offer.html
@@ -112,11 +112,14 @@
         </div>
       </div>
 
-
     </div>
 
     <footer>
+      <div class="contact_info">
+        <li><a href="index.html">Back</a></li>
+      </div>
     </footer>
+
   </content>
 
 </div>
