--- a/nlo.html
+++ b/nlo.html
@@ -154,6 +154,9 @@
     </div>
 
     <footer>
+      <div class="contact_info">
+        <li><a href="index.html">Back</a></li>
+      </div>
     </footer>
   </content>
 
