--- a/sellertier.html
+++ b/sellertier.html
@@ -118,6 +118,9 @@
     </div>
 
     <footer>
+      <div class="contact_info">
+        <li><a href="index.html">Back</a></li>
+      </div>
     </footer>
   </content>
 
