--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="description_pj02">
         <h1>Mercari — NLO</h1>
         <p>Selling is core of Mercari. However, not many of us know what we have at home that sells. I lead design to help new sellers discover items to sell from their homes.</p>
-        <a href="nlo.html" target="_blank"><div class="cta">View more</div></a>
+        <a href="nlo.html"><div class="cta">View more</div></a>
       </div>
     </div>
 
@@ -35,7 +35,7 @@
       <div class="description_pj01">
         <h1>Mercari — Loyalty Program</h1>
         <p>Lead design to create a loyalty program where sellers can get a lower sales fee based on their earnings on the market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</p>
-        <a href="sellertier.html" target="_blank"><div class="cta">View more</div></a>
+        <a href="sellertier.html"><div class="cta">View more</div></a>
       </div>
       <div class="img_pj01">
         <img src="img/loyalty.png">
@@ -50,7 +50,7 @@
       <div class="description_pj02">
         <h1>Mercari — Private Offers</h1>
         <p>Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used feature and continuing to make positive impact on overall sales.</p>
-        <a href="offer.html" target="_blank"><div class="cta">View more</div></a>
+        <a href="offer.html"><div class="cta">View more</div></a>
       </div>
     </div>
 
@@ -91,7 +91,7 @@
         <li>hiroyuki.noguchi7@gmail.com</li>
         <li><a href="https://www.linkedin.com/in/hiroyukinoguchi/" target="_blank"> CV</a></li>
       </div>
-    </footer>>
+    </footer>
   </content>
 
 </div>
