--- a/sellertier.html
+++ b/sellertier.html
@@ -115,6 +115,23 @@
         </div>
       </div>
 
+      <div class="sub_info">
+        <div class="title_sml">
+          <p>Exploration</p>
+        </div>
+        <div class="left">
+          
+        </div>
+        <div class="right">
+        </div>
+      </div>
+      <div class="nlo_img01">
+        <div class="img_in">
+          <img src="img/seller_tier/sellertier_pj_06.png">
+        </div>
+      </div>
+    </div>
+
     </div>
 
     <footer>
